# subject-frame-extractor

./: .env_example  .geminiignore  .gitignore  .gitmodules  .pre-commit-config.yaml  AGENTS.md  AGENTS_CODE_REFERENCE.md  CHANGELOG.md  OVERVIEW_comparison.md  README-new.md  README.md  REFACTOR.md  REFACTOR_COMPLETE.md  STARTUP_GUIDE.md  TECHNICAL_DOCUMENTATION.md  TODO_REPORT.md  _windows_STANDALONE_install.bat  app.md  app.py  app_refactored.py  app_small.py  app_small_tests.py  app_tests.py  benchmark_comprehension.py  bug_fixes.patch  changelog.md  cli.py  config.py  config.yaml  database.py  error_handling.py  events.py  fix_imports.py  fix_imports_absolute.py  fix_imports_overwrite.py  implementation_plan.md  inspect_insightface.py  logger.py  main.py  mock_metadata.db  (+20 more)
.agent/: gsd-file-manifest.json  settings.json
.agent/agents/: gsd-executor.md  gsd-phase-researcher.md  gsd-plan-checker.md  gsd-planner.md  gsd-verifier.md
.agent/hooks/: gsd-check-update.js  gsd-statusline.js
.agent/workflows/: add-phase.md  add-todo.md  audit-milestone.md  check-todos.md  complete-milestone.md  debug.md  execute.md  help.md  insert-phase.md  list-phase-assumptions.md  map.md  new-milestone.md  new-project.md  plan-milestone-gaps.md  plan.md  refine.md  remove-phase.md  research-phase.md  update.md
.agents/scratch/: generate_report.py
.claude/commands/: validate.md
.github/workflows/: auto-merge-jules.yml  ci.yml  update_docs.yml  ux-testing.yml
.gsd/: ARCHITECTURE.md  DECISIONS.md  JOURNAL.md  ROADMAP.md  SPEC.md  STACK.md  STATE.md  TODO.md
.gsd/milestones/: v2.1-stabilized-SUMMARY.md  v3.0-extensibility-SUMMARY.md  v4.0-cli-first-SUMMARY.md  v5.0-performance-architecture-SUMMARY.md
.gsd/templates/: user-setup.md
.jules/: bolt.md
.kilocode/rules/: rule.md
.planning/: HANDOFF.json
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/plans/: boost_manager_coverage.md
app/: __init__.py  analyze.py  app_ui.py  backend.py  base.py  composition.py  config.py  config.yaml  downloads.py  error_handling.py  events.py  extract.py  face.py  filter_logic.py  frames.py  grounding.py  logging.py  logging_enhanced.py  models.py  models_manager.py  performance_optimizer.py  person.py  pipeline_logic.py  pipelines.py  progress_enhanced.py  propagate.py  quality.py  sam_tracker.py  scene_logic.py  seed_selector.py  subject_masker.py  thumb_cache.py  utils.py  video.py
app/core/: config.py  thumb_cache.py  utils.py
app/domain/: models.py
app/io/: frames.py  video.py
app/logic/: events.py  filter_logic.py  pipeline_logic.py  scene_logic.py  session_logic.py
app/masking/: propagate.py  seed_selector.py  subject_masker.py
app/ml/: downloads.py  face.py  grounding.py  person.py  sam_tracker.py
app/pipelines/: analyze.py  base.py  extract.py
app/ui/: app_ui.py
configs/: config.yaml
core/: __init__.py  application_state.py  batch_manager.py  cli_args.py  cli_commands.py  cli_utils.py  config.py  context.py  database.py  db_schema.py  enums.py  error_handling.py  eta_calculator.py  events.py  export.py  face_clustering.py  filtering.py  fingerprint.py  image_utils.py  io_utils.py  logger.py  managers.py  models.py  photo_scoring.py  photo_utils.py  pipeline_results.py  pipelines.py  progress.py  protocols.py  sam3_patches.py  scene_utils.py  shared.py  system_health.py  utils.py  xmp_writer.py
core/managers/: __init__.py  analysis.py  extraction.py  face.py  media_session.py  model_loader.py  models.py  person_detector.py  registry.py  sam2.py  sam21.py  sam3.py  session.py  subject_detector.py  thumbnails.py  tracker_factory.py  video.py
core/operators/: __init__.py  advanced_face.py  base.py  crop.py  dedup.py  entropy.py  face_metrics.py  mask_operators.py  niqe.py  quality_score.py  registry.py  sharpness.py  simple_cv.py  viz.py
core/scene_utils/: __init__.py  detection.py  ffmpeg.py  helpers.py  mask_propagator.py  seed_selector.py  subject_masker.py
core/scene_utils_pkg/: __init__.py  helpers.py  seed_selector.py  subject_masker.py
core/utils/: __init__.py  device.py
docs/: AGENTS_CODE_REFERENCE.md  ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  HOW_TO_ADD_OPERATOR.md  INTEGRATIONS.md  OVERVIEW_fiftyone.md  OVERVIEW_ours.md  STACK.md  STRUCTURE.md  TESTS_CODE_REFERENCE.md  changelog.md
examples/operators/: pixel_count.py  test_pixel_count.py
from_json_mock/: mock.jsonl
jules-scratch/verification/: verify_accordion_fix.py  verify_bbox_fix.py  verify_bug_fix.py  verify_enhanced_ui.py  verify_filters.py  verify_metrics_tab.py  verify_ui.py  verify_ui_loads.py
sam3_vendored/: pyproject.toml
scripts/: README.md  diff_upstream_sam3.sh  generate_todo_report.py  jules_setup_script.sh  linux_run_app.sh  linux_setup_playwright.sh  linux_test_all.sh  linux_test_cov.sh  linux_test_integration.sh  linux_test_sam2.sh  linux_test_sam3.sh  linux_test_ui.sh  linux_test_unit.sh  run_unit_tests.sh  run_ux_audit.py  take_screenshot.py  test.sh  update_agents_md.py  verify_quality.py  windows_STANDALONE_install.bat  windows_run_app.bat  windows_update.bat
tests/: README.md  TESTING.md  TESTS_CODE_REFERENCE.md  conftest.py  jules_setup_script.md  mock_app.py  repro_wrapper.py  requirements-test.txt  smoke_test_ui_init.py  test.py  test_app.py  test_app_startup.py  test_app_ui.py  test_app_ui_logic.py  test_application_state.py  test_backend.py  test_batch_manager.py  test_bug_fixes.py  test_config.py  test_core.py  test_core_export_extended.py  test_database.py  test_dedup.py  test_enhanced_logging.py  test_error_handling.py  test_export.py  test_export_advanced.py  test_filter_logic.py  test_filtering.py  test_gallery_utils.py  test_gpu_e2e.py  test_handlers.py  test_integration.py  test_integration_sam3_patches.py  test_integration_sam3_patches_unit.py  test_launch_config.py  test_managers.py  test_mask_propagator_logic.py  test_performance_optimizer.py  test_pipelines.py  (+18 more)
ui/: app_ui.py  decorators.py  gallery_utils.py
verification/: e2e_run.py  verify_simple.py
(+396 files in other folders)
