[project]
name = "subject-frame-extractor"
version = "0.1.0"
description = "AI-powered tool for extracting and analyzing video frames"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "gradio",
    "insightface",
    "numba",
    "numpy<2",
    "onnxruntime-gpu",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "scenedetect",
    "vot-toolkit",
    "yt-dlp",
    "huggingface_hub",
    "pyiqa",
    "matplotlib",
    "imagehash",
    "mediapipe",
    "scikit-learn",
    "scikit-image",
    "lpips",
    "pydantic",
    "pydantic-settings",
    "timm>=1.0.17",
    "ftfy",
    "regex",
    "iopath",
    "decord",
    "python-dotenv",
    "pycocotools",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform != 'win32'",
    "sam3",
    "psutil",
]

[dependency-groups]
dev = [
    "pytest",
    "ruff",
]

[tool.uv]
# Note: Sources are relative to the root pyproject.toml
sources = { sam3 = { path = "SAM3_repo", editable = true } }

[tool.setuptools]
packages = ["core", "ui"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short --ignore=tests/e2e/ -m 'not integration and not gpu_e2e'"
markers = [
    "unit: Unit tests (fast, isolated, use mocks)",
    "smoke: Import smoke tests (no mocks, catches missing imports)",
    "signature: Function signature validation tests",
    "integration: Integration tests (no mocks, require GPU)",
    "gpu_e2e: GPU E2E tests (real inference, catches runtime errors)",
    "e2e: End-to-end tests (require app running)",
    "slow: Tests that take longer to run",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "SAM3_repo",
    "venv",
    ".git",
    "__pycache__",
    "htmlcov",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # E=pycodestyle errors, F=pyflakes, W=warnings, I=isort
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E701",  # Multiple statements on one line (colon) - style choice
    "E702",  # Multiple statements on one line (semicolon) - style choice
    "E731",  # Lambda assignment - sometimes clearer
    "E741",  # Ambiguous variable name (l, O, I) - context-dependent
    "E402",  # Module import not at top - often intentional for conditional imports
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E722", "E712"]  # E722=bare except, E712=equality to True/False (needed for numpy bools)
