[project]
name = "subject-frame-extractor"
version = "4.0.0"
description = "AI-powered tool for extracting and analyzing video frames"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "gradio",
    "insightface",
    "numba",
    "numpy>=1.26.0,<2.0.0",
    "ml-dtypes>=0.5.0",
    "onnxruntime-gpu",
    "opencv-python",
    "Pillow",
    "PyYAML",
    "scenedetect",
    "vot-toolkit",
    "yt-dlp",
    "huggingface_hub",
    "pyiqa",
    "matplotlib",
    "imagehash",
    "mediapipe",
    "scikit-learn",
    "scikit-image",
    "lpips",
    "pydantic",
    "pydantic-settings",
    "timm>=1.0.17",
    "ftfy",
    "regex",
    "iopath",
    "decord",
    "python-dotenv",
    "pycocotools",
    "triton-windows; sys_platform == 'win32'",
    "triton; sys_platform != 'win32'",
    "sam3",
    "sam2>=1.0",
    "psutil",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
    "pytest-cov>=5.0",
    "pytest-rerunfailures>=15.0",
    "pyright>=1.1.390",
    "hypothesis>=6.130",
    "mutmut>=2.5",
    "pre-commit>=3.0",
    "ruff",
]

[tool.uv]
# Note: Sources are relative to the root pyproject.toml
sources = { sam3 = { path = "SAM3_repo", editable = true } }

[tool.setuptools]
packages = ["core", "ui"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
norecursedirs = ["SAM3_repo", ".agent", "scripts", "examples", "outputs"]
addopts = "-v --tb=short --cov=core --cov-report=term-missing --cov-fail-under=80 --ignore=tests/e2e/ -m 'not integration and not gpu_e2e and not audit and not slow'"
markers = [
    "unit: Unit tests (fast, isolated, use mocks)",
    "smoke: Import smoke tests (no mocks, catches missing imports)",
    "signature: Function signature validation tests",
    "integration: Integration tests (no mocks, require GPU)",
    "gpu_e2e: GPU E2E tests (real inference, catches runtime errors)",
    "e2e: End-to-end tests (require app running)",
    "component: Component-level verification tests",
    "slow: Tests that take longer to run",
    "sam3: Tests for SAM3-specific logic and patches",
    "sam2: Tests for SAM2-specific logic and integration",
    "accessibility: Accessibility quality markers",
    "audit: Main quality audit marker",
    "ux_audit: UX-specific audit metrics",
    "visual: Visual consistency and regression tests",
    "context_eval: Context-adherence and AST-based checks",
    "flaky: Marker for non-deterministic tests to allow retries",
]

[tool.coverage.run]
source = ["core"]
branch = true
omit = [
    "core/sam3_patches.py", # External repo patches
]

[tool.coverage.report]
show_missing = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[tool.ruff]
line-length = 120
target-version = "py310"
exclude = [
    "SAM3_repo",
    "outputs",
    "venv",
    ".git",
    "__pycache__",
    "htmlcov",
    ".pytest_cache",
]

[tool.ruff.lint]
select = ["E", "F", "W", "I"]  # E=pycodestyle errors, F=pyflakes, W=warnings, I=isort
ignore = [
    "E501",  # Line too long (handled by formatter)
    "E701",  # Multiple statements on one line (colon) - style choice
    "E702",  # Multiple statements on one line (semicolon) - style choice
    "E731",  # Lambda assignment - sometimes clearer
    "E741",  # Ambiguous variable name (l, O, I) - context-dependent
    "E402",  # Module import not at top - often intentional for conditional imports
]

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["E722", "E712"]  # E722=bare except, E712=equality to True/False (needed for numpy bools)

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "basic"
exclude = ["SAM3_repo", "outputs", "venv", ".git", "**/__pycache__"]
